--- a/.travis.yml
+++ b/.travis.yml
@@ -7,59 +7,12 @@ env:
 
 matrix:
   include:
-    ##
-    # Test basic installation with different Travis environments
-    ##
-    # Ubuntu 12.04 container build
-    - os: linux
-      sudo: false
-      env: COMPONENTS=icc
-    # Ubuntu 12.04 VM
-    - os: linux
-      sudo: required
-      env: COMPONENTS=icc
-    # Ubuntu 14.04 VM
-    - os: linux
-      sudo: required
-      dist: trusty
-      env: COMPONENTS=icc
 
-    ##
-    # Test individual components
-    ##
-    # IPP
+    # Everything (for debugging without taxing Travis too heavily)
     - os: linux
       sudo: false
-      env: COMPONENTS="icc,ipp"
-    # TBB
-    - os: linux
-      sudo: false
-      env: COMPONENTS="icc,tbb"
-    # DAAL
-    - os: linux
-      sudo: false
-      env: COMPONENTS="icc,daal"
-    # MPI
-    - os: linux
-      sudo: false
-      env: COMPONENTS="icc,mpi"
-    # Fortran
-    - os: linux
-      sudo: false
-      env: COMPONENTS="icc,ifort"
-    # Fortran + MKL
-    - os: linux
-      sudo: false
-      env: COMPONENTS="icc,ifort,mkl"
-    # Fortran + MPI
-    - os: linux
-      sudo: false
-      env: COMPONENTS="icc,ifort,mpi"
+      env: COMPONENTS="icc,ifort,mpi,daal,ipp,tbb,mkl"
 
-    # # Everything (for debugging without taxing Travis too heavily)
-    # - os: linux
-    #   sudo: false
-    #   env: COMPONENTS="icc,ifort,mpi,daal,ipp,tbb,mkl"
 before_install:
   - ./install-icc.sh --components "${COMPONENTS}"
   - source ~/.bashrc
